# instrumentall

./: .travis.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  TODO  VERSION  appveyor.yml  branch_README.md
CI/: README
CI/appveyor/: install_dependencies.bat
CI/travis/: install_dependencies.sh
cmake/: python.cmake  users.cmake
cmake/modules/: FindGenAPI.cmake  FindPoco.cmake
cmake/tools/: fileSHA1.cmake  stringSHA1.cmake
conf/: console.py
conf/rc/: GuiRes.wxg  GuiRes.xrc
doc/: README.md  branching.md  contributing.md  install.md  versioning.md
doc/features/: README.md  genicam.md
runtimeEnv/: README.txt  instrumentall.properties.sample
runtimeEnv/conf/rc/: GuiRes.wxg  GuiRes.xrc
runtimeEnv/python/embed/: README.txt  camera.py  instruTools.py
runtimeEnv/python/modScripts/: README.txt
runtimeEnv/python/scripts/: README.txt  asiMotionTest.py  meca500Ctrl.py  meca500Init.py  meca500Park.py  meca500Test.py  simpleMainDialog.py  variopticLensTest.py
src/: Breaker.cpp  Breaker.h  DaqDeviceFactory.cpp  DaqDeviceFactory.h  DataAttribute.cpp  DataAttribute.h  DataAttributeIn.cpp  DataAttributeIn.h  DataAttributeOut.cpp  DataAttributeOut.h  DataBuffer.h  DataGen.cpp  DataGen.h  DataGenFactory.cpp  DataGenFactory.h  DataItem.cpp  DataItem.h  DataItem.ipp  DataLogger.cpp  DataLogger.h  DataManager.cpp  DataManager.h  DataPocoLogger.cpp  DataPocoLogger.h  DataProxy.cpp  DataProxy.h  DataSource.cpp  DataSource.h  DataTarget.cpp  DataTarget.h  DemoBranchFactory.cpp  DemoBranchFactory.h  DemoLeafFactory.cpp  DemoLeafFactory.h  DemoModule.cpp  DemoModule.h  DemoModuleA.cpp  DemoModuleA.h  DemoModuleB.cpp  DemoModuleB.h  (+145 more)
src/UI/: GuiManager.cpp  GuiManager.h  PythonManager.cpp  PythonManager.h
src/UI/GUI/: CustomWxApp.cpp  CustomWxApp.h  DepWxWidgets.cpp  DepWxWidgets.h  GuiProcessingUnit.cpp  GuiProcessingUnit.h  ImagePanel.cpp  ImagePanel.h  LoginDialog.cpp  LoginDialog.h  TopFrame.cpp  TopFrame.h
src/UI/python/: DepPython.cpp  DepPython.h  PyThreadKeeper.h  PythonAPI.h  PythonBreaker.cpp  PythonBreaker.h  PythonDataHolder.cpp  PythonDataHolder.h  PythonDataLogger.cpp  PythonDataLogger.h  PythonDataProxy.cpp  PythonDataProxy.h  PythonDataSource.cpp  PythonDataSource.h  PythonDataTarget.cpp  PythonDataTarget.h  PythonExposeAPI.cpp  PythonInPort.cpp  PythonInPort.h  PythonMainAppExport.cpp  PythonMainAppExport.h  PythonModule.cpp  PythonModule.h  PythonModuleFactory.cpp  PythonModuleFactory.h  PythonOutPort.cpp  PythonOutPort.h  PythonParameterGetter.cpp  PythonParameterGetter.h  PythonParameterSetter.cpp  PythonParameterSetter.h  PythonParameterizedEntity.cpp  PythonParameterizedEntity.h  PythonRedirection.cpp  PythonRedirection.h  PythonScriptRunner.cpp  PythonScriptRunner.h  PythonTask.cpp  PythonTask.h  PythonVerboseEntity.cpp  (+2 more)
src/core/: Breaker.cpp  Breaker.h  DataAttribute.cpp  DataAttribute.h  DataAttributeIn.cpp  DataAttributeIn.h  DataAttributeOut.cpp  DataAttributeOut.h  DataItem.h  DataLogger.cpp  DataLogger.h  DataManager.cpp  DataManager.h  DataProxy.cpp  DataProxy.h  DataSource.cpp  DataSource.h  DataTarget.cpp  DataTarget.h  DepOpenCv.cpp  DepOpenCv.h  DepPoco.cpp  DepPoco.h  Dependency.h  Dispatcher.cpp  Dispatcher.h  DuplicatedSource.cpp  DuplicatedSource.h  ErrorReporter.h  ExecutionAbortedException.cpp  ExecutionAbortedException.h  InDataPort.cpp  InDataPort.h  InDataPort.ipp  InPort.cpp  InPort.h  InPortUser.cpp  InPortUser.h  InPortUser.ipp  InitializedFlag.cpp  (+61 more)
src/dataLoggers/: DataPocoLogger.cpp  DataPocoLogger.h  SaveImageLogger.cpp  SaveImageLogger.h  ShowImageLogger.cpp  ShowImageLogger.h
src/dataProxies/: DataBuffer.cpp  DataBuffer.h  Delayer.cpp  Delayer.h  ImageReticle.cpp  ImageReticle.h  ImageScharr.cpp  ImageScharr.h  LinearConverter.cpp  LinearConverter.h  LinearConverter.ipp  SimpleNumConverter.cpp  SimpleNumConverter.h  SimpleNumConverter.ipp
src/modules/: EmptyModule.h  EmptyModuleFactory.h  GenericLeafFactory.h
src/modules/UI/: GuiProperties.cpp  GuiProperties.h  UiFactory.cpp  UiFactory.h
src/modules/control/: ControlFactory.cpp  ControlFactory.h  DataShapingFactory.cpp  DataShapingFactory.h  SeqAccumulator.cpp  SeqAccumulator.h  SeqAccumulator.ipp  SeqAccumulatorFactory.cpp  SeqAccumulatorFactory.h  TypedSeqAccumulatorFactory.cpp  TypedSeqAccumulatorFactory.h  TypedUnstackArrayFactory.cpp  TypedUnstackArrayFactory.h  UnstackArray.cpp  UnstackArray.h  UnstackArray.ipp  UnstackArrayFactory.cpp  UnstackArrayFactory.h
src/modules/dataGen/: DataGen.cpp  DataGen.h  DataGen.ipp  DataGenFactory.cpp  DataGenFactory.h  SeqGen.cpp  SeqGen.h  TypedDataGenFactory.cpp  TypedDataGenFactory.h
src/modules/demo/: DemoBranchFactory.cpp  DemoBranchFactory.h  DemoLeafFactory.cpp  DemoLeafFactory.h  DemoModule.cpp  DemoModule.h  DemoModuleA.cpp  DemoModuleA.h  DemoModuleB.cpp  DemoModuleB.h  DemoModuleDataSeq.cpp  DemoModuleDataSeq.h  DemoModuleFail.cpp  DemoModuleFail.h  DemoModuleForwarder.cpp  DemoModuleForwarder.h  DemoModuleFreeze.cpp  DemoModuleFreeze.h  DemoModuleParam.cpp  DemoModuleParam.h  DemoModuleSeqAccu.cpp  DemoModuleSeqAccu.h  (+6 more)
src/tools/: customRound.h
testsuite/python/: asiMotionTest.py  borderCutTest.py  boxMaskTest.py  breakerTest.py  bufferToTrigTest.py  cameraFromFilesTest.py  cancelationTest.py  cvMatTest.py  dataBufferTest.py  dataGenTest.py  dataGenTrigTest.py  dataHolderTest.py  dataLoggerTest.py  dataProxyParamTest.py  factoryTreeExportTest.py  failTest.py  freezeTest.py  generalInfo.py  imgCenterOfMassTest.py  imgCombTest.py  imgDiffTest.py  imgDistToOriginTest.py  imgHistogramTest.py  imgMixerTest.py  imgPrintInfoTest.py  imgReticleTest.py  imgStatsTest.py  linearConverterTest.py  modDataSeq.py  modDataSeqTest.py  modFactTest.py  modLogTest.py  modParamTest.py  modPortTest.py  noFreezeTest.py  parameterGetterTest.py  parameterSetterTest.py  pyModTest.py  rotCropTest.py  seqGenTest.py  (+4 more)
testsuite/resources/: modParamTest.properties  pyModBuffTest.py  pyModCancelScript.py  pyModScript.py  test.properties
version/: version.cmake  version.h.in
versionBuild/: version.cmake  version.h.in
(+113 files in other folders)
